Card: make `.card-group`, `.card-deck`, and `.card-columns` repsonsive

--- a/test/visual/flexbox-cards.html
+++ b/test/visual/flexbox-cards.html
@@ -49,7 +49,7 @@ Holder.addTheme("gray", {
         <div class="col-4">.col-4</div>
     </div>
 
-    <div class="card-deck">
+    <div class="card-deck-sm">
         <div class="card">
             <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
             <div class="card-body">
@@ -85,7 +85,7 @@ Holder.addTheme("gray", {
         <div class="col-3">.col-3</div>
     </div>
 
-    <div class="card-deck">
+    <div class="card-deck-sm">
         <div class="card">
             <div class="card-body">
                 Card 1
@@ -112,7 +112,7 @@ Holder.addTheme("gray", {
 
     <h2>Group</h2>
 
-    <div class="card-group">
+    <div class="card-group-sm">
       <div class="card">
         <img class="card-img-top img-fluid" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
         <div class="card-body">
@@ -145,44 +145,42 @@ Holder.addTheme("gray", {
     <h2>Footer Alignment - Flexbox Only</h2>
 
     <h3>Deck</h3>
-    <div class="card-deck-wrapper">
-      <div class="card-deck">
-        <div class="card">
-          <img class="card-img-top img-fluid" data-src="holder.js/100px200/" alt="Card image cap">
-          <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">Last updated 3 mins ago</small>
-          </div>
+    <div class="card-deck-md">
+      <div class="card">
+        <img class="card-img-top img-fluid" data-src="holder.js/100px200/" alt="Card image cap">
+        <div class="card-body">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         </div>
-        <div class="card">
-          <img class="card-img-top img-fluid" data-src="holder.js/100px200/" alt="Card image cap">
-          <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">Last updated 3 mins ago</small>
-          </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
         </div>
-        <div class="card">
-          <img class="card-img-top img-fluid" data-src="holder.js/100px200/" alt="Card image cap">
-          <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-          </div>
-          <div class="card-footer">
-            <small class="text-muted">Last updated 3 mins ago</small>
-          </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top img-fluid" data-src="holder.js/100px200/" alt="Card image cap">
+        <div class="card-body">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top img-fluid" data-src="holder.js/100px200/" alt="Card image cap">
+        <div class="card-body">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
         </div>
       </div>
     </div>
 
     <h3>Group</h3>
 
-    <div class="card-group">
+    <div class="card-group-md">
       <div class="card">
         <img class="card-img-top img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
         <div class="card-body">
