--- a/test/dev/player.html
+++ b/test/dev/player.html
@@ -359,6 +359,26 @@ body {
     filter: alpha(opacity=100);
     opacity: 1;
 }
+
+.player-caption-display {
+    position: absolute;
+    bottom: 1rem;
+    left: 50%;
+    display: block;
+    padding: .25rem;
+    max-width: 100%;
+    font-size: .9375rem;
+    text-align: center;
+    color: #fff;
+    background-color: rgba(0,0,0,.65);
+    border-radius: .25rem;
+    transform: translateX(-50%);
+}
+.player-fulldisplay .player-caption-display {
+    bottom: 5rem;
+    padding: .5rem 1rem;
+    font-size: 1.25rem;
+}
 </style>
 </head>
 
@@ -802,6 +822,52 @@ body {
     </div>
 </div>
 
+<hr />
+<hr />
+
+<h2 class="h4">Custom Caption Wrapper</h2>
+<div class="video-transcript">
+    <div data-cfw="player" class="video-wrapper" role="region" aria-label="video player">
+        <div class="embed-fluid">
+            <video poster="../../docs/assets/video/niagara_falls.jpg" controls>
+                <source src="../../docs/assets/video/niagara_falls.mp4">
+                <track src="../../docs/assets/video/niagara_falls-en.vtt" label="English" kind="subtitles" srclang="en" />
+            </video>
+            <div class="player-caption-display" data-cfw-player="caption-display"></div>
+        </div>
+        <div class="player-wrapper">
+            <div class="player" data-cfw-player="player">
+                <span class="player-control" data-cfw-player="control">
+                    <button type="button" class="btn btn-default" data-cfw-player="play" title="Play" aria-label="Play"><span class="fa fa-fw fa-play"></span></button>
+                    <button type="button" class="btn btn-default" data-cfw-player="pause" title="Pause" aria-label="Pause"><span class="fa fa-fw fa-pause"></span></button>
+                    <button type="button" class="btn btn-default" data-cfw-player="stop" title="Stop" aria-label="Stop"><span class="fa fa-fw fa-stop"></span></button>
+                </span>
+                <span class="player-time" data-cfw-player="time">
+                    <span class="player-time-current" data-cfw-player="time-current"></span>
+                    <span class="player-seek" data-cfw-player="seek">
+                    	<label>Seek slider<input type="text" /></label>
+                    </span>
+                    <span class="player-time-duration" data-cfw-player="time-duration"></span>
+                </span>
+
+                <span class="player-mute" data-cfw-player="mute">
+                    <button type="button" class="btn btn-default player-mute-on" title="Unmute" aria-label="Unmute"><span class="fa fa-fw fa-volume-off"></span></button>
+                    <button type="button" class="btn btn-default player-mute-off" title="Mute" aria-label="Mute"><span class="fa fa-fw fa-volume-up"></span></button>
+                </span>
+                <span class="player-volume" data-cfw-player="volume">
+                    <label>Volume slider<input type="text" /></label>
+                </span>
+                <button type="button" class="btn btn-default" data-cfw-player="loop" title="Repeat" aria-label="Repeat"><span class="fa fa-fw fa-refresh"></span></button>
+                <button type="button" class="btn btn-default" data-cfw-player="caption" title="Closed Captions" aria-label="Closed Captions"><span class="fa fa-fw fa-cc"></span></button>
+                <button type="button" class="btn btn-default" data-cfw-player="transcript" title="Transcript" aria-label="Transcript"><span class="fa fa-fw fa-file-text-o"></span></button>
+                <span class="player-fullscreen" data-cfw-player="fullscreen">
+                    <button type="button" class="btn btn-default player-fullscreen-on" title="Exit fullscreen" aria-label="Exit fullscreen"><span class="fa fa-fw fa-arrows-alt"></span></button>
+                    <button type="button" class="btn btn-default player-fullscreen-off" title="Fullscreen" aria-label="Fullscreen"><span class="fa fa-fw fa-arrows-alt"></span></button>
+                </span>
+            </div>
+        </div>
+    </div>
+</div>
 
 <!--
 <pre id="output" style="margin-top: 2em;"></pre>
