Adjust overlapping margins for sibling `.form-control` and `.input-group-btn` items in `.input-group`

--- a/test/visual/flexbox-input.html
+++ b/test/visual/flexbox-input.html
@@ -282,6 +282,89 @@ Holder.addTheme("gray", {
   <input type="text" class="form-control" placeholder="Username">
 </div>
 
+<h3>Margin Check</h3>
+
+<form class="form-inline mb-1">
+    <div class="input-group">
+        <span class="input-group-addon">Something:</span>
+        <span class="input-group-btn">
+            <button class="btn btn-outline-primary" type="button">All</button>
+        </span>
+        <span class="input-group-btn">
+            <button class="btn btn-outline-success" type="button">Yes</button>
+        </span>
+        <span class="input-group-btn">
+            <button class="btn btn-outline-danger" type="button">No</button>
+        </span>
+    </div>
+</form>
+
+<form class="form-inline mb-1">
+    <div class="input-group">
+        <span class="input-group-addon">Something:</span>
+        <span class="input-group-btn">
+            <button class="btn btn-outline-primary" type="button">All</button>
+        </span>
+		<span class="input-group-btn">
+            <button class="btn btn-outline-primary" type="button">All</button>
+        </span>
+		<input type="text" class="form-control">
+		<input type="text" class="form-control">
+        <span class="input-group-btn">
+            <button class="btn btn-outline-success" type="button">Yes</button>
+        </span>
+        <span class="input-group-btn">
+            <button class="btn btn-outline-danger" type="button">No</button>
+        </span>
+    </div>
+</form>
+
+<form class="form-inline mb-1">
+    <div class="input-group">
+        <span class="input-group-addon">Something:</span>
+        <input type="text" class="form-control">
+        <input type="text" class="form-control">
+        <span class="input-group-btn">
+            <button class="btn btn-outline-primary" type="button">Ok</button>
+        </span>
+        <span class="input-group-btn">
+            <button class="btn btn-outline-primary" type="button">Ok</button>
+        </span>
+
+    </div>
+</form>
+
+<form class="form-inline mb-1">
+    <div class="input-group">
+        <span class="input-group-addon">Something:</span>
+        <span class="input-group-btn">
+            <button class="btn btn-outline-primary" type="button">Ok</button>
+        </span>
+        <span class="input-group-btn">
+            <button class="btn btn-outline-primary" type="button">Ok</button>
+        </span>
+        <input type="text" class="form-control">
+        <input type="text" class="form-control">
+    </div>
+</form>
+
+<form class="form-inline mb-1">
+    <div class="input-group">
+        <span class="input-group-addon">Something:</span>
+        <span class="input-group-btn" data-cfw="buttons">
+            <label class="btn btn-outline-primary">
+                <input type="radio" checked>Ok
+            </label>
+            <label class="btn btn-outline-success">
+                <input type="radio">Yes
+            </label>
+            <label class="btn btn-outline-danger">
+                <input type="radio">No
+            </label>
+        </span>
+    </div>
+</form>
+
 </div></div></div>
 
 </body>
