Restore preventDefault to tootlip toggle() method

--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -852,6 +852,8 @@ $(window).ready(function() {
 
             <button type="button" data-cfw="popover" data-cfw-popover-trigger="hover focus" title="I have a title">test</button>
 
+            <a href="#" role="button" data-cfw="popover" title="I have a title">test</a>
+
             <script type="text/javascript">
                 $(window).ready(function() {
                     $('#pop_7t').one('beforeShow.cfw.popover', function(e) {
