float and text util class cleanup

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -396,7 +396,7 @@ Holder.addTheme("gray", {
   <footer class="blockquote-footer">Someone famous in <cite>Source Title</cite></footer>
 </blockquote>
 
-<blockquote class="blockquote text-right">
+<blockquote class="blockquote text-end">
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
   <footer class="blockquote-footer">Someone famous in <cite>Source Title</cite></footer>
 </blockquote>
@@ -431,7 +431,7 @@ Showing a <kbd>kdb sample</kbd>
 
 <figure class="figure">
   <img data-src="holder.js/300x200" class="figure-img img-fluid radius-a" alt="A square placeholder image with rounded corners in a figure.">
-  <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+  <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
 </figure>
 
 <figure class="figure">
@@ -999,8 +999,8 @@ Showing a <kbd>kdb sample</kbd>
   </div>
   <div class="form-group row">
       <fieldset class="w-100 clearfix">
-        <legend class="col-sm-2 float-sm-left form-control-legend">Radios</legend>
-        <div class="col-sm-10 float-sm-left">
+        <legend class="col-sm-2 float-sm-start form-control-legend">Radios</legend>
+        <div class="col-sm-10 float-sm-start">
           <div class="form-check">
             <label class="form-check-label">
               <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
@@ -1024,8 +1024,8 @@ Showing a <kbd>kdb sample</kbd>
     </div>
     <div class="form-group row">
       <fieldset class="w-100 clearfix">
-        <legend class="col-sm-2 float-sm-left form-control-legend">Checkbox</legend>
-        <div class="col-sm-10 float-sm-left">
+        <legend class="col-sm-2 float-sm-start form-control-legend">Checkbox</legend>
+        <div class="col-sm-10 float-sm-start">
           <div class="form-check">
             <label class="form-check-label">
               <input class="form-check-input" type="checkbox"> Check me out
@@ -1244,7 +1244,7 @@ Showing a <kbd>kdb sample</kbd>
 <h3>Select sizing test</h3>
 <div class="select-sizing">
     <form class="row">
-      <div class="col-md-2 text-right">
+      <div class="col-md-2 text-end">
         <button type="button" class="btn btn-primary btn-xs">Test</button>
       </div>
       <fieldset class="form-group col-md-5">
@@ -1263,7 +1263,7 @@ Showing a <kbd>kdb sample</kbd>
       </fieldset>
     </form>
     <form class="row">
-      <div class="col-md-2 text-right">
+      <div class="col-md-2 text-end">
         <button type="button" class="btn btn-primary btn-sm">Test</button>
       </div>
       <fieldset class="form-group col-md-5">
@@ -1282,7 +1282,7 @@ Showing a <kbd>kdb sample</kbd>
       </fieldset>
     </form>
     <form class="row">
-      <div class="col-md-2 text-right">
+      <div class="col-md-2 text-end">
         <button type="button" class="btn btn-primary">Test</button>
       </div>
       <fieldset class="form-group col-md-5">
@@ -1301,7 +1301,7 @@ Showing a <kbd>kdb sample</kbd>
       </fieldset>
     </form>
     <form class="row">
-      <div class="col-md-2 text-right">
+      <div class="col-md-2 text-end">
         <button type="button" class="btn btn-primary btn-lg">Test</button>
       </div>
       <fieldset class="form-group col-md-5">
@@ -1320,7 +1320,7 @@ Showing a <kbd>kdb sample</kbd>
       </fieldset>
     </form>
     <form class="row">
-      <div class="col-md-2 text-right">
+      <div class="col-md-2 text-end">
         <button type="button" class="btn btn-primary btn-xl">Test</button>
       </div>
       <fieldset class="form-group col-md-5">
@@ -1716,15 +1716,15 @@ Anchor variants:<br />
 <h3>List group with badges</h3>
 <ul class="list-group">
   <li class="list-group-item">
-    <span class="badge badge-pill float-right">14</span>
+    <span class="badge badge-pill float-end">14</span>
     Cras justo odio
   </li>
   <li class="list-group-item">
-    <span class="badge badge-pill float-right">2</span>
+    <span class="badge badge-pill float-end">2</span>
     Dapibus ac facilisis in
   </li>
   <li class="list-group-item">
-    <span class="badge badge-pill float-right">1</span>
+    <span class="badge badge-pill float-end">1</span>
     Morbi leo risus
   </li>
 </ul>
@@ -3089,7 +3089,7 @@ Anchor variants:<br />
 <small>resize screen below 'md' breakpoint</small><br />
 <nav class="navbar navbar-light bg-faded mb-1">
   <a class="navbar-brand" href="#">Responsive navbar</a>
-  <button class="navbar-toggle d-lg-none float-right" type="button" data-cfw="collapse" data-cfw-collapse-target="#exCollapsingNavbar2" aria-label="Toggle navigation">
+  <button class="navbar-toggle d-lg-none float-end" type="button" data-cfw="collapse" data-cfw-collapse-target="#exCollapsingNavbar2" aria-label="Toggle navigation">
     <span class="icon-menu" aria-hidden="true">&#8801;</span>
   </button>
   <div class="collapse navbar-toggleable-md" id="exCollapsingNavbar2">
@@ -3469,7 +3469,7 @@ Anchor variants:<br />
       </div>
     </div>
 
-    <div class="card text-right">
+    <div class="card text-end">
       <div class="card-body">
         <h4 class="card-title">Special title treatment</h4>
         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -3844,7 +3844,7 @@ Anchor variants:<br />
   <div class="card">
     <img class="card-img img-fluid" data-src="holder.js/100px200" alt="Card image" />
   </div>
-  <div class="card text-right">
+  <div class="card text-end">
     <div class="card-body">
       <blockquote class="blockquote">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
