--- a/test/visual/flexbox-list-group.html
+++ b/test/visual/flexbox-list-group.html
@@ -43,15 +43,15 @@ Holder.addTheme("gray", {
 
 <ul class="list-group">
   <li class="list-group-item">
-    <span class="badge badge-pill float-right">14</span>
+    <span class="badge badge-pill float-end">14</span>
     Cras justo odio
   </li>
   <li class="list-group-item">
-    <span class="badge badge-pill float-right">2</span>
+    <span class="badge badge-pill float-end">2</span>
     Dapibus ac facilisis in
   </li>
   <li class="list-group-item">
-    <span class="badge badge-pill float-right">1</span>
+    <span class="badge badge-pill float-end">1</span>
     Morbi leo risus
   </li>
 </ul>
