--- a/test/visual/forms.html
+++ b/test/visual/forms.html
@@ -41,7 +41,7 @@ Holder.addTheme("gray", {
 <h3>Select Sizing Comparison:</h3>
 <div class="select-sizing">
     <form class="row">
-      <div class="col-md-2 text-right">
+      <div class="col-md-2 text-end">
         <button type="button" class="btn btn-primary btn-xs">Test</button>
       </div>
       <div class="col-md-1">
@@ -73,7 +73,7 @@ Holder.addTheme("gray", {
       </fieldset>
     </form>
     <form class="row">
-      <div class="col-md-2 text-right">
+      <div class="col-md-2 text-end">
         <button type="button" class="btn btn-primary btn-sm">Test</button>
       </div>
       <div class="col-md-1">
@@ -105,7 +105,7 @@ Holder.addTheme("gray", {
       </fieldset>
     </form>
     <form class="row">
-      <div class="col-md-2 text-right">
+      <div class="col-md-2 text-end">
         <button type="button" class="btn btn-primary">Test</button>
       </div>
       <div class="col-md-1">
@@ -137,7 +137,7 @@ Holder.addTheme("gray", {
       </fieldset>
     </form>
     <form class="row">
-      <div class="col-md-2 text-right">
+      <div class="col-md-2 text-end">
         <button type="button" class="btn btn-primary btn-lg">Test</button>
       </div>
       <div class="col-md-1">
@@ -169,7 +169,7 @@ Holder.addTheme("gray", {
       </fieldset>
     </form>
     <form class="row">
-      <div class="col-md-2 text-right">
+      <div class="col-md-2 text-end">
         <button type="button" class="btn btn-primary btn-xl">Test</button>
       </div>
       <div class="col-md-1">
