--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -732,7 +732,7 @@ $(window).ready(function() {
                 <button class="btn btn-default popover-viewport-bottom" title="This should be shifted to the right">Shift Right</button>
                 <button class="btn btn-default popover-viewport-right" title="This should be shifted down">Shift Down</button>
 
-                <button class="btn btn-default float-right popover-viewport-bottom" title="This should be shifted to the left">Shift Left</button>
+                <button class="btn btn-default float-end popover-viewport-bottom" title="This should be shifted to the left">Shift Left</button>
 
                 <button class="btn btn-default popover-viewport-right btn-bottom" title="This should be shifted up">Shift Up</button>
 
@@ -954,7 +954,7 @@ $(window).ready(function() {
                 <button class="btn btn-default tooltip-viewport-bottom" title="This should be shifted to the right">Shift Right</button>
                 <button class="btn btn-default tooltip-viewport-right" title="This should be shifted down">Shift Down</button>
 
-                <button class="btn btn-default float-right tooltip-viewport-bottom" title="This should be shifted to the left">Shift Left</button>
+                <button class="btn btn-default float-end tooltip-viewport-bottom" title="This should be shifted to the left">Shift Left</button>
 
                 <button class="btn btn-default tooltip-viewport-right btn-bottom" title="This should be shifted up">Shift Up</button>
             </div>
