dropdown left/right modifiers updated to reverse/forward

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -2015,11 +2015,11 @@ Anchor variants:<br />
   <div class="col-lg-6">
     <div class="input-group">
       <input type="text" class="form-control" aria-label="Text input with dropdown button">
-      <div class="input-group-btn">
+      <div class="input-group-btn dropdown-menu-reverse">
         <button type="button" class="btn btn-secondary dropdown-toggle" data-cfw="dropdown">
           Action
         </button>
-        <ul class="dropdown-menu dropdown-menu-right">
+        <ul class="dropdown-menu">
           <li><a href="#">Action</a></li>
           <li><a href="#">Another action</a></li>
           <li><a href="#">Something else here</a></li>
@@ -2054,7 +2054,7 @@ Anchor variants:<br />
   <div class="col-lg-6">
     <div class="input-group">
       <input type="text" class="form-control" aria-label="Text input with segmented button dropdown">
-      <div class="input-group-btn">
+      <div class="input-group-btn dropdown-menu-reverse">
         <button type="button" class="btn btn-secondary">Action</button>
         <button type="button" class="btn btn-secondary dropdown-toggle" data-cfw="dropdown">
           <span class="sr-only">Toggle Dropdown</span>
@@ -2442,7 +2442,7 @@ Anchor variants:<br />
         </ul>
     </div>
 
-    <div class="btn-group dropdown-menu-left" style="float: right;">
+    <div class="btn-group dropdown-menu-reverse" style="float: right;">
         <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-backlink="true">
             Drop Left <!-- <span class="caret" aria-hidden="true"></span> -->
         </button>
@@ -2510,17 +2510,17 @@ Anchor variants:<br />
     <ul class="dropdown-menu">
         <li class="dropdown-header">Dropdown header</li>
         <li><a href="#">Action</a></li>
-        <li class="dropdown-menu-left">
+        <li class="dropdown-menu-reverse">
             <a href="#">Left menu</a>
             <ul>
-                <li class="dropdown-menu-left">
+                <li class="dropdown-menu-reverse">
                     <a href="#">Left menu</a>
                     <ul>
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
                 </li>
-                <li class="dropdown-menu-right">
+                <li class="dropdown-menu-forward">
                     <a href="#">Right menu</a>
                     <ul>
                         <li><a href="#">Action</a></li>
@@ -2529,17 +2529,17 @@ Anchor variants:<br />
                 </li>
             </ul>
         </li>
-        <li class="dropdown-menu-right">
+        <li class="dropdown-menu-forward">
             <a href="#">Right menu</a>
             <ul>
-                <li class="dropdown-menu-left">
+                <li class="dropdown-menu-reverse">
                     <a href="#">Left menu</a>
                     <ul>
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
                 </li>
-                <li class="dropdown-menu-right">
+                <li class="dropdown-menu-forward">
                     <a href="#">Right menu</a>
                     <ul>
                         <li><a href="#">Action</a></li>
@@ -2553,24 +2553,24 @@ Anchor variants:<br />
     </ul>
 </div>
 
-<div class="btn-group dropdown-menu-right">
+<div class="btn-group dropdown-menu-forward">
     <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-backlink="true">
         Drop Right <!-- <span class="caret" aria-hidden="true"></span> -->
     </button>
     <ul class="dropdown-menu">
         <li class="dropdown-header">Dropdown header</li>
         <li><a href="#">Action</a></li>
-        <li class="dropdown-menu-left">
+        <li class="dropdown-menu-reverse">
             <a href="#">Left menu</a>
             <ul>
-                <li class="dropdown-menu-left">
+                <li class="dropdown-menu-reverse">
                     <a href="#">Left menu</a>
                     <ul>
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
                 </li>
-                <li class="dropdown-menu-right">
+                <li class="dropdown-menu-forward">
                     <a href="#">Right menu</a>
                     <ul>
                         <li><a href="#">Action</a></li>
@@ -2579,17 +2579,17 @@ Anchor variants:<br />
                 </li>
             </ul>
         </li>
-        <li class="dropdown-menu-right">
+        <li class="dropdown-menu-forward">
             <a href="#">Right menu</a>
             <ul>
-                <li class="dropdown-menu-left">
+                <li class="dropdown-menu-reverse">
                     <a href="#">Left menu</a>
                     <ul>
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
                 </li>
-                <li class="dropdown-menu-right">
+                <li class="dropdown-menu-forward">
                     <a href="#">Right menu</a>
                     <ul>
                         <li><a href="#">Action</a></li>
@@ -2603,24 +2603,24 @@ Anchor variants:<br />
     </ul>
 </div>
 
-<div class="btn-group dropdown-menu-left" style="float: right;">
+<div class="btn-group dropdown-menu-reverse" style="float: right;">
     <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-backlink="true">
         Drop Left <!-- <span class="caret" aria-hidden="true"></span> -->
     </button>
     <ul class="dropdown-menu">
         <li class="dropdown-header">Dropdown header</li>
         <li><a href="#">Action</a></li>
-        <li class="dropdown-menu-left">
+        <li class="dropdown-menu-reverse">
             <a href="#">Left menu</a>
             <ul>
-                <li class="dropdown-menu-left">
+                <li class="dropdown-menu-reverse">
                     <a href="#">Left menu</a>
                     <ul>
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
                 </li>
-                <li class="dropdown-menu-right">
+                <li class="dropdown-menu-forward">
                     <a href="#">Right menu</a>
                     <ul>
                         <li><a href="#">Action</a></li>
@@ -2629,17 +2629,17 @@ Anchor variants:<br />
                 </li>
             </ul>
         </li>
-        <li class="dropdown-menu-right">
+        <li class="dropdown-menu-forward">
             <a href="#">Right menu</a>
             <ul>
-                <li class="dropdown-menu-left">
+                <li class="dropdown-menu-reverse">
                     <a href="#">Left menu</a>
                     <ul>
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
                 </li>
-                <li class="dropdown-menu-right">
+                <li class="dropdown-menu-forward">
                     <a href="#">Right menu</a>
                     <ul>
                         <li><a href="#">Action</a></li>
@@ -2662,17 +2662,17 @@ Anchor variants:<br />
     <ul class="dropdown-menu">
         <li class="dropdown-header">Dropdown header</li>
         <li><a href="#">Action</a></li>
-        <li class="dropdown-menu-left">
+        <li class="dropdown-menu-reverse">
             <a href="#">Left menu</a>
             <ul>
-                <li class="dropdown-menu-left">
+                <li class="dropdown-menu-reverse">
                     <a href="#">Left menu</a>
                     <ul>
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
                 </li>
-                <li class="dropdown-menu-right">
+                <li class="dropdown-menu-forward">
                     <a href="#">Right menu</a>
                     <ul>
                         <li><a href="#">Action</a></li>
@@ -2681,17 +2681,17 @@ Anchor variants:<br />
                 </li>
             </ul>
         </li>
-        <li class="dropdown-menu-right">
+        <li class="dropdown-menu-forward">
             <a href="#">Right menu</a>
             <ul>
-                <li class="dropdown-menu-left">
+                <li class="dropdown-menu-reverse">
                     <a href="#">Left menu</a>
                     <ul>
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
                 </li>
-                <li class="dropdown-menu-right">
+                <li class="dropdown-menu-forward">
                     <a href="#">Right menu</a>
                     <ul>
                         <li><a href="#">Action</a></li>
@@ -2706,24 +2706,24 @@ Anchor variants:<br />
 </div>
 
 
-<div class="btn-group dropup dropdown-menu-right">
+<div class="btn-group dropup dropdown-menu-forward">
     <button type="button" class="btn dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-backlink="true" data-cfw-dropdown-backtop="true">
         Dropup Right
     </button>
     <ul class="dropdown-menu">
         <li class="dropdown-header">Dropdown header</li>
         <li><a href="#">Action</a></li>
-        <li class="dropdown-menu-left">
+        <li class="dropdown-menu-reverse">
             <a href="#">Left menu</a>
             <ul>
-                <li class="dropdown-menu-left">
+                <li class="dropdown-menu-reverse">
                     <a href="#">Left menu</a>
                     <ul>
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
                 </li>
-                <li class="dropdown-menu-right">
+                <li class="dropdown-menu-forward">
                     <a href="#">Right menu</a>
                     <ul>
                         <li><a href="#">Action</a></li>
@@ -2732,17 +2732,17 @@ Anchor variants:<br />
                 </li>
             </ul>
         </li>
-        <li class="dropdown-menu-right">
+        <li class="dropdown-menu-forward">
             <a href="#">Right menu</a>
             <ul>
-                <li class="dropdown-menu-left">
+                <li class="dropdown-menu-reverse">
                     <a href="#">Left menu</a>
                     <ul>
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
                 </li>
-                <li class="dropdown-menu-right">
+                <li class="dropdown-menu-forward">
                     <a href="#">Right menu</a>
                     <ul>
                         <li><a href="#">Action</a></li>
@@ -2756,24 +2756,24 @@ Anchor variants:<br />
     </ul>
 </div>
 
-<div class="btn-group dropup dropdown-menu-left">
+<div class="btn-group dropup dropdown-menu-reverse">
     <button type="button" class="btn dropdown-toggle" data-cfw="dropdown data-cfw-dropdown-backlink="true" data-cfw-dropdown-backtop="true">
         Dropup Left
     </button>
     <ul class="dropdown-menu">
         <li class="dropdown-header">Dropdown header</li>
         <li><a href="#">Action</a></li>
-        <li class="dropdown-menu-left">
+        <li class="dropdown-menu-reverse">
             <a href="#">Left menu</a>
             <ul>
-                <li class="dropdown-menu-left">
+                <li class="dropdown-menu-reverse">
                     <a href="#">Left menu</a>
                     <ul>
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
                 </li>
-                <li class="dropdown-menu-right">
+                <li class="dropdown-menu-forward">
                     <a href="#">Right menu</a>
                     <ul>
                         <li><a href="#">Action</a></li>
@@ -2782,17 +2782,17 @@ Anchor variants:<br />
                 </li>
             </ul>
         </li>
-        <li class="dropdown-menu-right">
+        <li class="dropdown-menu-forward">
             <a href="#">Right menu</a>
             <ul>
-                <li class="dropdown-menu-left">
+                <li class="dropdown-menu-reverse">
                     <a href="#">Left menu</a>
                     <ul>
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
                     </ul>
                 </li>
-                <li class="dropdown-menu-right">
+                <li class="dropdown-menu-forward">
                     <a href="#">Right menu</a>
                     <ul>
                         <li><a href="#">Action</a></li>
