--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -1469,9 +1469,9 @@ $(window).ready(function() {
             </div>
 
             <!-- Single button -->
-            <div class="btn-group dropdown-menu-left" style="float: right;">
+            <div class="btn-group dropdown-menu-reverse" style="float: right;">
                 <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-target="#dropdownTest_5" data-cfw-dropdown-backlink=true>
-                    Drop Left
+                    Reverse Dropdown
                 </button>
                 <ul class="dropdown-menu" id="dropdownTest_5">
                     <li class="dropdown-header">Dropdown header</li>
