--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en-us" dir="rtl">
+<html lang="en-us">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 <title>Figuration Widget Tests</title>
 
-<!--<link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" /> -->
-<link type="text/css" rel="stylesheet" href="../../dist/css/figuration-rtl.css" />
+<link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
 <!--[if lt IE 10]>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/0.7.24/MutationObserver.min.js" integrity="sha384-8HHYYRe45k4Xq40fi/cZaaby4FJgnOOVmnRzX3OWtwpfiUPfx7tnK2QkDPuIRGm0" crossorigin="anonymous"></script>
