Use `align-items: center;` on input-group, not chlidren, to keep from growing in height when next to tall element

--- a/test/visual/flexbox-input.html
+++ b/test/visual/flexbox-input.html
@@ -170,6 +170,27 @@ Holder.addTheme("gray", {
     </span>
 </div>
 
+<div class="d-flex">
+  <div class="input-group">
+    <div class="input-group-btn">
+      <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Action
+      </button>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="#">Action</a>
+        <a class="dropdown-item" href="#">Another action</a>
+        <a class="dropdown-item" href="#">Something else here</a>
+        <div role="separator" class="dropdown-divider"></div>
+        <a class="dropdown-item" href="#">Separated link</a>
+      </div>
+    </div>
+    <input type="text" class="form-control" aria-label="Text input with dropdown button">
+    <span class="input-group-addon">.00</span>
+  </div>
+  <div style="width:100px;height:100px;background-color:red;"></div>
+</div>
+</hr >
+
 <hr />
 
 <h3>Input group sizes</h3>
