Add popver dragging visual test

--- a/test/visual/tooltip.html
+++ b/test/visual/tooltip.html
@@ -46,6 +46,8 @@
 <button class="btn btn-default" style="position: absolute; bottom: 0;" title="Tooltip at bottom" data-cfw="tooltip" data-cfw-tooltip-placement="bottom auto">Tooltip at bottom</button>
 
 
+<button class="btn btn-default" title="Tooltip at top" data-cfw="popover" data-cfw-popover-placement="top auto" data-cfw-popover-drag="true" data-cfw-popover-content="Wow">Popover at top</button>
+
 <button class="btn btn-primary" data-cfw="modal" data-cfw-modal-target="#saveModal">New</button>
 
 <div class="modal" id="saveModal">
