Update spacing utils to be rtl friendly

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -430,7 +430,7 @@ Showing a <kbd>kdb sample</kbd>
 </figure>
 
 <figure class="figure">
-  <img data-src="holder.js/300x200" class="figure-img img-fluid radius-a" alt="A square placeholder image with rounded corners in a figure.">
+  <img data-src="holder.js/300x200" class="figure-img img-fluid radius" alt="A square placeholder image with rounded corners in a figure.">
   <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
 </figure>
 
@@ -1804,13 +1804,13 @@ Anchor variants:<br />
 
 <h3>Button toolbar</h3>
 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-  <div class="btn-group mr-0_5" role="group" aria-label="First group">
+  <div class="btn-group me-0_5" role="group" aria-label="First group">
     <button type="button" class="btn">1</button>
     <button type="button" class="btn">2</button>
     <button type="button" class="btn">3</button>
     <button type="button" class="btn">4</button>
   </div>
-  <div class="btn-group mr-0_5" role="group" aria-label="Second group">
+  <div class="btn-group me-0_5" role="group" aria-label="Second group">
     <button type="button" class="btn">5</button>
     <button type="button" class="btn">6</button>
     <button type="button" class="btn">7</button>
@@ -1868,7 +1868,7 @@ Anchor variants:<br />
     </ul>
   </div>
 
-  <button type="button" class="btn btn-secondary">Caret <span class="caret ml-0_25" aria-hidden="true"></span></button>
+  <button type="button" class="btn btn-secondary">Caret <span class="caret ms-0_25" aria-hidden="true"></span></button>
 </div>
 <br />
 
@@ -2978,7 +2978,7 @@ Anchor variants:<br />
       <a class="nav-link disabled" href="#">Disabled</a>
     </li>
   </ul>
-  <form class="form-inline ml-auto">
+  <form class="form-inline ms-auto">
     <input class="form-control" type="text" placeholder="Search" aria-label="Search">
     <button class="btn btn-outline-primary" type="submit">Search</button>
   </form>
@@ -3000,7 +3000,7 @@ Anchor variants:<br />
       <a class="nav-link disabled" href="#">Disabled</a>
     </li>
   </ul>
-  <form class="form-inline ml-auto">
+  <form class="form-inline ms-auto">
     <input class="form-control" type="text" placeholder="Search" aria-label="Search">
     <button class="btn" type="submit">Search</button>
   </form>
@@ -3022,7 +3022,7 @@ Anchor variants:<br />
       <a class="nav-link disabled" href="#">Disabled</a>
     </li>
   </ul>
-  <form class="form-inline ml-auto">
+  <form class="form-inline ms-auto">
     <input class="form-control" type="text" placeholder="Search" aria-label="Search">
     <button class="btn" type="submit">Search</button>
   </form>
@@ -3044,7 +3044,7 @@ Anchor variants:<br />
       <a class="nav-link disabled" href="#">Disabled</a>
     </li>
   </ul>
-  <form class="form-inline ml-auto">
+  <form class="form-inline ms-auto">
     <input class="form-control" type="text" placeholder="Search" aria-label="Search">
     <button class="btn btn-outline-primary" type="submit">Search</button>
   </form>
@@ -3223,7 +3223,7 @@ Anchor variants:<br />
 
 <h3>Media</h3>
 <div class="media">
-  <a href="#" class="d-flex mr-1">
+  <a href="#" class="d-flex me-1">
     <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
   </a>
   <div class="media-body">
@@ -3237,7 +3237,7 @@ Anchor variants:<br />
     <h4 class="media-heading">Media heading</h4>
     Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
   </div>
-  <a href="#" class="d-flex ml-1">
+  <a href="#" class="d-flex ms-1">
     <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
   </a>
 </div>
@@ -3245,14 +3245,14 @@ Anchor variants:<br />
 
 <h3>Nested media</h3>
 <div class="media">
-  <a href="#" class="d-flex mr-1">
+  <a href="#" class="d-flex me-1">
     <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
   </a>
   <div class="media-body">
     <h4 class="media-heading">Media heading</h4>
     Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
     <div class="media">
-      <a href="#" class="d-flex mr-1">
+      <a href="#" class="d-flex me-1">
         <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
       </a>
       <div class="media-body">
@@ -3265,7 +3265,7 @@ Anchor variants:<br />
 
 <h3>Media alignment</h3>
 <div class="media">
-  <a href="#" class="d-flex flex-self-start mr-1">
+  <a href="#" class="d-flex flex-self-start me-1">
     <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
   </a>
   <div class="media-body">
@@ -3276,7 +3276,7 @@ Anchor variants:<br />
 </div>
 
 <div class="media">
-  <a href="#" class="d-flex flex-self-center mr-1">
+  <a href="#" class="d-flex flex-self-center me-1">
     <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
   </a>
   <div class="media-body">
@@ -3287,7 +3287,7 @@ Anchor variants:<br />
 </div>
 
 <div class="media">
-  <a href="#" class="d-flex flex-self-end mr-1">
+  <a href="#" class="d-flex flex-self-end me-1">
     <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
   </a>
   <div class="media-body">
@@ -3301,7 +3301,7 @@ Anchor variants:<br />
 <h3>Media list</h3>
 <ul class="list-unstyled">
   <li class="media">
-    <a href="#" class="d-flex mr-1">
+    <a href="#" class="d-flex me-1">
       <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
     </a>
     <div class="media-body">
@@ -3309,7 +3309,7 @@ Anchor variants:<br />
       <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
       <!-- Nested media object -->
       <div class="media">
-        <a href="#" class="d-flex mr-1">
+        <a href="#" class="d-flex me-1">
           <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
         </a>
         <div class="media-body">
@@ -3317,7 +3317,7 @@ Anchor variants:<br />
           Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.
           <!-- Nested media object -->
           <div class="media">
-            <a href="#" class="d-flex mr-1">
+            <a href="#" class="d-flex me-1">
               <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
             </a>
             <div class="media-body">
@@ -3329,7 +3329,7 @@ Anchor variants:<br />
       </div>
       <!-- Nested media object -->
       <div class="media">
-        <a href="#" class="d-flex mr-1">
+        <a href="#" class="d-flex me-1">
           <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
         </a>
         <div class="media-body">
@@ -3344,7 +3344,7 @@ Anchor variants:<br />
       <h4 class="media-heading">Media heading</h4>
       Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.
     </div>
-    <a href="#" class="d-flex ml-1">
+    <a href="#" class="d-flex ms-1">
       <img data-src="holder.js/64x64" class="media-object" alt="64x64" />
     </a>
   </li>
@@ -4256,7 +4256,7 @@ Anchor variants:<br />
     <form class="form-inline">
         <div id="slider0" class="d-flex flex-items-center">
             <div class="form-group">
-                <label id="slider0_0_Label" for="slider0_0" class="mr-0_25">Value</label>
+                <label id="slider0_0_Label" for="slider0_0" class="me-0_25">Value</label>
                 <input id="slider0_0" type="text" class="form-control" value="50" />
             </div>
         </div>
@@ -4274,13 +4274,13 @@ $('#slider0').CFW_Slider({
 <div class="slider-sample">
     <form class="form-inline">
         <div id="slider1" class="d-flex flex-items-center">
-            <div class="form-group mr-0_25">
-                <label id="slider1_0_Label" for="slider1_0" class="mr-0_25">Min</label>
+            <div class="form-group me-0_25">
+                <label id="slider1_0_Label" for="slider1_0" class="me-0_25">Min</label>
                 <input id="slider1_0" type="text" class="form-control" value="-25" />
             </div>
             <div class="form-group">
                 <input id="slider1_1" type="text" class="form-control" value="25" />
-                <label id="slider1_1_Label" for="slider1_1" class="ml-0_25">Max</label>
+                <label id="slider1_1_Label" for="slider1_1" class="ms-0_25">Max</label>
             </div>
         </div>
     </form>
@@ -4298,8 +4298,8 @@ $('#slider1').CFW_Slider({
 <div class="slider-sample">
     <form class="form-inline">
         <div id="slider2" class="d-flex flex-items-center">
-            <div class="form-group mr-0_25">
-                <label id="slider2_0_Label" for="slider2_0" class="mr-0_25">Start</label>
+            <div class="form-group me-0_25">
+                <label id="slider2_0_Label" for="slider2_0" class="me-0_25">Start</label>
                 <select id="slider2_0" class="form-control">
                     <option value="12:00 am">12:00 am</option>
                     <option value="1:00 am">1:00 am</option>
@@ -4356,7 +4356,7 @@ $('#slider1').CFW_Slider({
                     <option value="11:00 pm">11:00 pm</option>
                     <option value="12:00 am">12:00 am</option>
                 </select>
-                <label id="slider2_1_Label" for="slider2_1" class="ml-0_25">End</label>
+                <label id="slider2_1_Label" for="slider2_1" class="ms-0_25">End</label>
             </div>
         </div>
     </form>
