More util class updates

--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -213,7 +213,7 @@ $(window).ready(function() {
                 <form class="form-inline">
                     <div id="slider0" class="d-flex flex-items-center" data-cfw="slider" data-cfw-slider-min=0 data-cfw-slider-max=100 data-cfw-slider-step=1>
                         <div class="form-group">
-                            <label id="slider0_0_Label" for="slider0_0" class="mr-0_25">Value</label>
+                            <label id="slider0_0_Label" for="slider0_0" class="me-0_25">Value</label>
                             <input id="slider0_0" type="text" class="form-control" value="50" />
                         </div>
                     </div>
@@ -233,13 +233,13 @@ $(window).ready(function() {
             <div class="slider-sample">
                 <form class="form-inline">
                     <div id="slider1" class="d-flex flex-items-center">
-                        <div class="form-group mr-0_25">
-                            <label id="slider1_0_Label" for="slider1_0" class="mr-0_25">Min</label>
+                        <div class="form-group me-0_25">
+                            <label id="slider1_0_Label" for="slider1_0" class="me-0_25">Min</label>
                             <input id="slider1_0" type="text" class="form-control" value="-25" />
                         </div>
                         <div class="form-group">
                             <input id="slider1_1" type="text" class="form-control" value="25" />
-                            <label id="slider1_1_Label" for="slider1_1" class="ml-0_25">Max</label>
+                            <label id="slider1_1_Label" for="slider1_1" class="ms-0_25">Max</label>
                         </div>
                     </div>
                 </form>
@@ -257,8 +257,8 @@ $(window).ready(function() {
             <div class="slider-sample">
                 <form class="form-inline">
                     <div id="slider2" class="d-flex flex-items-center">
-                        <div class="form-group mr-0_25">
-                            <label id="slider2_0_Label" for="slider2_0" class="mr-0_25">Start</label>
+                        <div class="form-group me-0_25">
+                            <label id="slider2_0_Label" for="slider2_0" class="me-0_25">Start</label>
                             <select id="slider2_0" class="form-control">
                                 <option value="12:00 am">12:00 am</option>
                                 <option value="1:00 am">1:00 am</option>
@@ -315,7 +315,7 @@ $(window).ready(function() {
                                 <option value="11:00 pm">11:00 pm</option>
                                 <option value="12:00 am">12:00 am</option>
                             </select>
-                            <label id="slider2_1_Label" for="slider2_1" class="ml-0_25">End</label>
+                            <label id="slider2_1_Label" for="slider2_1" class="ms-0_25">End</label>
                         </div>
                     </div>
                 </form>
@@ -1116,7 +1116,7 @@ $(window).ready(function() {
                 </div>
             </div>
 
-            <div class="btn-group mr-1 mb-1">
+            <div class="btn-group me-1 mb-1">
                 <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown">
                     Has Inputs
                 </button>
