--- a/test/visual/flexbox-navbar.html
+++ b/test/visual/flexbox-navbar.html
@@ -28,7 +28,7 @@
     <button class="navbar-toggle collapsed" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbarB0">
         <span aria-hidden="true">&#8801;</span>
     </button>
-    <a href="#" class="navbar-brand ml-0_5">Basic</a>
+    <a href="#" class="navbar-brand ms-0_5">Basic</a>
 
     <div class="navbar-collapse collapse" id="navbarB0">
         <ul class="navbar-nav">
@@ -51,7 +51,7 @@
             </li>
         </ul>
         <form class="form-inline my-1 my-md-0">
-            <input class="form-control mr-0_25" type="text" placeholder="Search" aria-label="Search">
+            <input class="form-control me-0_25" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-primary" type="submit">Search</button>
         </form>
     </div>
@@ -84,7 +84,7 @@
             </li>
         </ul>
         <form class="form-inline my-1 my-md-0">
-            <input class="form-control mr-0_25" type="text" placeholder="Search" aria-label="Search">
+            <input class="form-control me-0_25" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-primary" type="submit">Search</button>
         </form>
     </div>
@@ -118,8 +118,8 @@
                 </div>
             </li>
         </ul>
-        <form class="form-inline ml-auto">
-            <input class="form-control mr-0_25" type="text" placeholder="Search" aria-label="Search">
+        <form class="form-inline ms-auto">
+            <input class="form-control me-0_25" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-primary" type="submit">Search</button>
         </form>
     </div>
@@ -151,8 +151,8 @@
                 </div>
             </li>
         </ul>
-        <form class="form-inline ml-auto">
-            <input class="form-control mr-0_25" type="text" placeholder="Search" aria-label="Search">
+        <form class="form-inline ms-auto">
+            <input class="form-control me-0_25" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-primary" type="submit">Search</button>
         </form>
     </div>
@@ -184,8 +184,8 @@
                 </div>
             </li>
         </ul>
-        <form class="form-inline ml-auto">
-            <input class="form-control mr-0_25" type="text" placeholder="Search" aria-label="Search">
+        <form class="form-inline ms-auto">
+            <input class="form-control me-0_25" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-primary" type="submit">Search</button>
         </form>
     </div>
@@ -217,8 +217,8 @@
                 </div>
             </li>
         </ul>
-        <form class="form-inline ml-auto">
-            <input class="form-control mr-0_25" type="text" placeholder="Search" aria-label="Search">
+        <form class="form-inline ms-auto">
+            <input class="form-control me-0_25" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-primary" type="submit">Search</button>
         </form>
     </div>
@@ -250,8 +250,8 @@
                 </div>
             </li>
         </ul>
-        <form class="form-inline ml-auto">
-            <input class="form-control mr-0_25" type="text" placeholder="Search" aria-label="Search">
+        <form class="form-inline ms-auto">
+            <input class="form-control me-0_25" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-primary" type="submit">Search</button>
         </form>
     </div>
@@ -286,7 +286,7 @@
             </li>
         </ul>
         <form class="form-inline">
-            <input class="form-control mr-0_25" type="text" placeholder="Search" aria-label="Search">
+            <input class="form-control me-0_25" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-primary" type="submit">Search</button>
         </form>
     </div>
@@ -321,8 +321,8 @@
                     </div>
                 </li>
             </ul>
-            <form class="form-inline ml-auto">
-                <input class="form-control mr-0_25" type="text" placeholder="Search" aria-label="Search">
+            <form class="form-inline ms-auto">
+                <input class="form-control me-0_25" type="text" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-primary" type="submit">Search</button>
             </form>
         </div>
@@ -420,8 +420,8 @@
                     </div>
                 </li>
             </ul>
-            <form class="form-inline ml-auto">
-                <input class="form-control mr-0_25" type="text" placeholder="Search" aria-label="Search">
+            <form class="form-inline ms-auto">
+                <input class="form-control me-0_25" type="text" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-primary" type="submit">Search</button>
             </form>
         </div>
