--- a/test/visual/flexbox-button.html
+++ b/test/visual/flexbox-button.html
@@ -26,13 +26,13 @@
     <hr />
 
     <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-        <div class="btn-group mr-0_5" role="group" aria-label="First group">
+        <div class="btn-group me-0_5" role="group" aria-label="First group">
             <button type="button" class="btn">1</button>
             <button type="button" class="btn">2</button>
             <button type="button" class="btn">3</button>
             <button type="button" class="btn">4</button>
         </div>
-        <div class="btn-group mr-0_5" role="group" aria-label="Second group">
+        <div class="btn-group me-0_5" role="group" aria-label="Second group">
             <button type="button" class="btn btn-primary">5</button>
             <button type="button" class="btn btn-primary">6</button>
             <button type="button" class="btn btn-primary">7</button>
@@ -104,7 +104,7 @@
     <hr />
 
     <div class="btn-toolbar mb-1" role="toolbar" aria-label="Toolbar with button groups">
-        <div class="btn-group mr-0_5" role="group" aria-label="First group">
+        <div class="btn-group me-0_5" role="group" aria-label="First group">
             <button type="button" class="btn">1</button>
             <button type="button" class="btn">2</button>
             <button type="button" class="btn">3</button>
