--- a/test/visual/flexbox-form-inline.html
+++ b/test/visual/flexbox-form-inline.html
@@ -18,12 +18,12 @@
     <h1>Inline Forms</h1>
 
     <form class="form-inline">
-        <div class="form-group mb-0_5 mr-sm-0_5 mb-sm-0">
-            <label for="inlineName0" class="form-control-label mr-sm-0_5">Name</label>
+        <div class="form-group mb-0_5 me-sm-0_5 mb-sm-0">
+            <label for="inlineName0" class="form-control-label me-sm-0_5">Name</label>
             <input type="text" class="form-control" id="inlineName0" placeholder="Jane Doe">
         </div>
-        <div class="form-group mb-0_5 mr-sm-0_5 mb-sm-0">
-            <label for="inlineEmail0" class="form-control-label mr-sm-0_5">Email</label>
+        <div class="form-group mb-0_5 me-sm-0_5 mb-sm-0">
+            <label for="inlineEmail0" class="form-control-label me-sm-0_5">Email</label>
             <input type="email" class="form-control" id="inlineEmail0" placeholder="jane.doe@example.com">
         </div>
         <button type="submit" class="btn btn-primary">Send invitation</button>
@@ -32,15 +32,15 @@
     <hr />
 
     <form class="form-inline form-inline-checkbox">
-        <div class="form-group mb-0_5 mr-sm-0_5 mb-sm-0">
+        <div class="form-group mb-0_5 me-sm-0_5 mb-sm-0">
             <label class="sr-only" for="inlineEmail1">Email address</label>
             <input type="email" class="form-control" id="inlineEmail1" placeholder="Enter email">
         </div>
-        <div class="form-group mb-0_5 mr-sm-0_5 mb-sm-0">
+        <div class="form-group mb-0_5 me-sm-0_5 mb-sm-0">
             <label class="sr-only" for="inlinePassword1">Password</label>
             <input type="password" class="form-control" id="inlinePassword1" placeholder="Password">
         </div>
-        <div class="form-check mb-0_5 mr-sm-0_5 mb-sm-0">
+        <div class="form-check mb-0_5 me-sm-0_5 mb-sm-0">
             <label class="form-check-label">
                 <input class="form-check-input" type="checkbox"> Remember me
             </label>
@@ -51,7 +51,7 @@
     <hr />
 
     <form class="form-inline">
-        <div class="form-group mr-sm-0_5">
+        <div class="form-group me-sm-0_5">
             <label class="sr-only" for="inputAmount2">Amount (in dollars)</label>
             <div class="input-group">
                 <div class="input-group-addon">$</div>
@@ -65,14 +65,14 @@
     <hr />
 
     <form class="form-inline">
-        <label class="mr-sm-0_5" for="inlinePref4">Preference</label>
-        <select class="form-control mb-0_5 mr-sm-0_5 mb-sm-0" id="inlinePref4">
+        <label class="me-sm-0_5" for="inlinePref4">Preference</label>
+        <select class="form-control mb-0_5 me-sm-0_5 mb-sm-0" id="inlinePref4">
             <option selected>Choose...</option>
             <option value="1">One</option>
             <option value="2">Two</option>
             <option value="3">Three</option>
         </select>
-        <label class="custom-control custom-checkbox mb-0_5 mr-sm-0_5 mb-sm-0">
+        <label class="custom-control custom-checkbox mb-0_5 me-sm-0_5 mb-sm-0">
             <input type="checkbox" class="custom-control-input">
             <span class="custom-control-indicator"></span>
             <span class="custom-control-description">Remember my preference</span>
@@ -83,14 +83,14 @@
     <hr />
 
     <form class="form-inline">
-        <label class="mr-sm-0_5" for="inlinePref5">Preference</label>
-        <select class="custom-select mb-0_5 mr-sm-0_5 mb-sm-0" id="inlinePref5">
+        <label class="me-sm-0_5" for="inlinePref5">Preference</label>
+        <select class="custom-select mb-0_5 me-sm-0_5 mb-sm-0" id="inlinePref5">
             <option selected>Choose...</option>
             <option value="1">One</option>
             <option value="2">Two</option>
             <option value="3">Three</option>
         </select>
-        <label class="custom-control custom-checkbox mb-0_5 mr-sm-0_5 mb-sm-0">
+        <label class="custom-control custom-checkbox mb-0_5 me-sm-0_5 mb-sm-0">
             <input type="checkbox" class="custom-control-input">
             <span class="custom-control-indicator"></span>
             <span class="custom-control-description">Remember my preference</span>
