--- a/test/visual/flexbox-media.html
+++ b/test/visual/flexbox-media.html
@@ -35,7 +35,7 @@ Holder.addTheme("gray", {
     <h1>Media object</h1>
 
     <div class="media">
-        <a href="#" class="d-flex mr-1">
+        <a href="#" class="d-flex me-1">
             <img data-src="holder.js/64x64" alt="Placeholder image" />
         </a>
         <div class="media-body">
@@ -51,7 +51,7 @@ Holder.addTheme("gray", {
             <h4>Media heading</h4>
             <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
         </div>
-        <a href="#" class="d-flex ml-1">
+        <a href="#" class="d-flex ms-1">
             <img data-src="holder.js/64x64" alt="Placeholder image" />
         </a>
     </div>
@@ -59,7 +59,7 @@ Holder.addTheme("gray", {
     <hr />
 
     <div class="media">
-        <img data-src="holder.js/64x64" class="d-flex mr-1" alt="Placeholder image" />
+        <img data-src="holder.js/64x64" class="d-flex me-1" alt="Placeholder image" />
         <div class="media-body">
             <h4>Media heading</h4>
             <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
@@ -73,14 +73,14 @@ Holder.addTheme("gray", {
     <h2>Nested media</h2>
 
     <div class="media">
-        <a href="#" class="d-flex mr-1">
+        <a href="#" class="d-flex me-1">
             <img data-src="holder.js/64x64" alt="Placeholder image" />
         </a>
         <div class="media-body">
             <h4>Media heading</h4>
             <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
             <div class="media">
-                <a href="#" class="d-flex mr-1">
+                <a href="#" class="d-flex me-1">
                     <img data-src="holder.js/64x64" alt="Placeholder image" />
                 </a>
                 <div class="media-body">
@@ -96,7 +96,7 @@ Holder.addTheme("gray", {
     <h2>Media alignment</h2>
 
     <div class="media">
-        <a href="#" class="d-flex mr-1">
+        <a href="#" class="d-flex me-1">
             <img data-src="holder.js/64x64" alt="Placeholder image" />
         </a>
         <div class="media-body">
@@ -107,7 +107,7 @@ Holder.addTheme("gray", {
     </div>
 
     <div class="media">
-        <a href="#" class="d-flex flex-self-center mr-1">
+        <a href="#" class="d-flex flex-self-center me-1">
             <img data-src="holder.js/64x64" alt="Placeholder image" />
         </a>
         <div class="media-body">
@@ -118,7 +118,7 @@ Holder.addTheme("gray", {
     </div>
 
     <div class="media">
-        <a href="#" class="d-flex flex-self-end mr-1">
+        <a href="#" class="d-flex flex-self-end me-1">
             <img data-src="holder.js/64x64" alt="Placeholder image" />
         </a>
         <div class="media-body">
@@ -134,7 +134,7 @@ Holder.addTheme("gray", {
 
     <ul class="list-unstyled">
         <li class="media">
-            <a href="#" class="d-flex mr-1">
+            <a href="#" class="d-flex me-1">
                 <img data-src="holder.js/64x64" alt="Placeholder image" />
             </a>
             <div class="media-body">
@@ -142,7 +142,7 @@ Holder.addTheme("gray", {
                 <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
                 <!-- Nested media object -->
                 <div class="media">
-                    <a href="#" class="d-flex mr-1">
+                    <a href="#" class="d-flex me-1">
                         <img data-src="holder.js/64x64" alt="Placeholder image" />
                     </a>
                     <div class="media-body">
@@ -150,7 +150,7 @@ Holder.addTheme("gray", {
                         <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
                         <!-- Nested media object -->
                         <div class="media">
-                            <a href="#" class="d-flex mr-1">
+                            <a href="#" class="d-flex me-1">
                                 <img data-src="holder.js/64x64" alt="Placeholder image" />
                             </a>
                             <div class="media-body">
@@ -162,7 +162,7 @@ Holder.addTheme("gray", {
                 </div>
                 <!-- Nested media object -->
                 <div class="media">
-                    <a href="#" class="d-flex mr-1">
+                    <a href="#" class="d-flex me-1">
                         <img data-src="holder.js/64x64" alt="Placeholder image" />
                     </a>
                     <div class="media-body">
@@ -177,7 +177,7 @@ Holder.addTheme("gray", {
                 <h4>Media heading</h4>
                 <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
             </div>
-            <a href="#" class="d-flex ml-1">
+            <a href="#" class="d-flex ms-1">
                 <img data-src="holder.js/64x64" alt="Placeholder image" />
             </a>
         </li>
