--- a/test/visual/flexbox-progress.html
+++ b/test/visual/flexbox-progress.html
@@ -87,7 +87,7 @@
     <div class="progress">
         <div id="transition-bar" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
-    <div class="form-group col-4 pl-0">
+    <div class="form-group col-4 ps-0">
         <label for="transition-val">Transition value</label>
         <select class="form-control" id="transition-val">
           <option value="0">0</option>
