--- a/test/visual/switch.html
+++ b/test/visual/switch.html
@@ -30,7 +30,7 @@
 </label>
 
 <h2>Rounded</h2>
-<label class="switch switch-rounded mr-1">
+<label class="switch switch-rounded me-1">
     <input type="checkbox" class="switch-input">
     <span class="switch-description">Off</span>
     <span class="switch-control"></span>
@@ -39,25 +39,25 @@
 
 <h2>States</h2>
 
-<label class="switch mr-1">
+<label class="switch me-1">
     <input type="checkbox" class="switch-input">
     <span class="switch-control"></span>
     <span class="switch-description">Default unchecked</span>
 </label>
 
-<label class="switch mr-1">
+<label class="switch me-1">
     <input type="checkbox" class="switch-input" checked>
     <span class="switch-control"></span>
     <span class="switch-description">Default checked</span>
 </label>
 
-<label class="switch mr-1">
+<label class="switch me-1">
     <input type="checkbox" class="switch-input" disabled>
     <span class="switch-control"></span>
     <span class="switch-description">Disabled unchecked</span>
 </label>
 
-<label class="switch mr-1">
+<label class="switch me-1">
     <input type="checkbox" class="switch-input" disabled checked>
     <span class="switch-control"></span>
     <span class="switch-description">Disabled checked</span>
@@ -74,25 +74,25 @@
 
 <h2>Reversed States</h2>
 
-<label class="switch switch-reverse mr-1">
+<label class="switch switch-reverse me-1">
     <input type="checkbox" class="switch-input">
     <span class="switch-control"></span>
     <span class="switch-description">Reversed unchecked</span>
 </label>
 
-<label class="switch switch-reverse mr-1">
+<label class="switch switch-reverse me-1">
     <input type="checkbox" class="switch-input" checked>
     <span class="switch-control"></span>
     <span class="switch-description">Reversed checked</span>
 </label>
 
-<label class="switch switch-reverse mr-1">
+<label class="switch switch-reverse me-1">
     <input type="checkbox" class="switch-input" disabled>
     <span class="switch-control"></span>
     <span class="switch-description">Disabled unchecked</span>
 </label>
 
-<label class="switch switch-reverse mr-1">
+<label class="switch switch-reverse me-1">
     <input type="checkbox" class="switch-input" disabled checked>
     <span class="switch-control"></span>
     <span class="switch-description">Disabled checked</span>
@@ -101,60 +101,60 @@
 <h2>Sizing</h2>
 
 <div class="form-group form-inline">
-    <label class="switch switch-xs mr-1">
+    <label class="switch switch-xs me-1">
         <input type="checkbox" class="switch-input">
-        <span class="switch-description mr-0_25">.switch-xs</span>
+        <span class="switch-description me-0_25">.switch-xs</span>
         <span class="switch-control"></span>
     </label>
-    <label class="switch switch-rounded switch-xs mr-1">
+    <label class="switch switch-rounded switch-xs me-1">
         <input type="checkbox" class="switch-input">
         <span class="switch-control"></span>
     </label>
     <input type="text" class="form-control form-control-xs" placeholder=".form-control-xs" />
 </div>
 <div class="form-group form-inline">
-    <label class="switch switch-sm mr-1">
+    <label class="switch switch-sm me-1">
         <input type="checkbox" class="switch-input">
-        <span class="switch-description mr-0_25">.switch-sm</span>
+        <span class="switch-description me-0_25">.switch-sm</span>
         <span class="switch-control"></span>
     </label>
-    <label class="switch switch-rounded switch-sm mr-1">
+    <label class="switch switch-rounded switch-sm me-1">
         <input type="checkbox" class="switch-input">
         <span class="switch-control"></span>
     </label>
     <input type="text" class="form-control form-control-sm" placeholder=".form-control-sm" />
 </div>
 <div class="form-group form-inline">
-    <label class="switch mr-1">
+    <label class="switch me-1">
         <input type="checkbox" class="switch-input">
-        <span class="switch-description mr-0_25">Default size</span>
+        <span class="switch-description me-0_25">Default size</span>
         <span class="switch-control"></span>
     </label>
-    <label class="switch switch-rounded mr-1">
+    <label class="switch switch-rounded me-1">
         <input type="checkbox" class="switch-input">
         <span class="switch-control"></span>
     </label>
     <input type="text" class="form-control" placeholder="Default .form-control" />
 </div>
 <div class="form-group form-inline">
-    <label class="switch switch-lg mr-1">
+    <label class="switch switch-lg me-1">
         <input type="checkbox" class="switch-input">
-        <span class="switch-description mr-0_25">.switch-lg</span>
+        <span class="switch-description me-0_25">.switch-lg</span>
         <span class="switch-control"></span>
     </label>
-    <label class="switch switch-rounded switch-lg mr-1">
+    <label class="switch switch-rounded switch-lg me-1">
         <input type="checkbox" class="switch-input">
         <span class="switch-control"></span>
     </label>
     <input type="text" class="form-control form-control-lg" placeholder=".form-control-lg" />
 </div>
 <div class="form-group form-inline">
-    <label class="switch switch-xl mr-1">
+    <label class="switch switch-xl me-1">
         <input type="checkbox" class="switch-input">
-        <span class="switch-description mr-0_25">.switch-xl</span>
+        <span class="switch-description me-0_25">.switch-xl</span>
         <span class="switch-control"></span>
     </label>
-    <label class="switch switch-rounded switch-xl mr-1">
+    <label class="switch switch-rounded switch-xl me-1">
         <input type="checkbox" class="switch-input">
         <span class="switch-control"></span>
     </label>
@@ -163,157 +163,157 @@
 
 <h2>Colors</h2>
 <div class="form-group form-inline">
-    <label class="switch mr-1">
+    <label class="switch me-1">
         <input type="checkbox" class="switch-input">
         <span class="switch-control"></span>
-        <span class="switch-description ml-0_25">Default</span>
+        <span class="switch-description ms-0_25">Default</span>
     </label>
-    <label class="switch switch-rounded mr-1">
+    <label class="switch switch-rounded me-1">
         <input type="checkbox" class="switch-input">
         <span class="switch-control"></span>
-        <span class="switch-description ml-0_25">Rounded Default</span>
+        <span class="switch-description ms-0_25">Rounded Default</span>
     </label>
-    <label class="switch mr-1">
+    <label class="switch me-1">
         <input type="checkbox" class="switch-input" disabled>
         <span class="switch-control"></span>
-        <span class="switch-description ml-0_25">Disabled Default</span>
+        <span class="switch-description ms-0_25">Disabled Default</span>
     </label>
-    <label class="switch mr-1">
+    <label class="switch me-1">
         <input type="checkbox" class="switch-input" disabled checked>
         <span class="switch-control"></span>
-        <span class="switch-description ml-0_25">Disabled Checked Default</span>
+        <span class="switch-description ms-0_25">Disabled Checked Default</span>
     </label>
 </div>
 <div class="form-group form-inline">
-    <label class="switch switch-primary mr-1">
+    <label class="switch switch-primary me-1">
         <input type="checkbox" class="switch-input">
         <span class="switch-control"></span>
-        <span class="switch-description ml-0_25">Primary</span>
+        <span class="switch-description ms-0_25">Primary</span>
     </label>
-    <label class="switch switch-rounded switch-primary mr-1">
+    <label class="switch switch-rounded switch-primary me-1">
         <input type="checkbox" class="switch-input">
         <span class="switch-control"></span>
-        <span class="switch-description ml-0_25">Rounded Primary</span>
+        <span class="switch-description ms-0_25">Rounded Primary</span>
     </label>
-    <label class="switch switch-primary mr-1">
+    <label class="switch switch-primary me-1">
         <input type="checkbox" class="switch-input" disabled>
         <span class="switch-control"></span>
-        <span class="switch-description ml-0_25">Disabled Primary</span>
+        <span class="switch-description ms-0_25">Disabled Primary</span>
     </label>
-    <label class="switch switch-primary mr-1">
+    <label class="switch switch-primary me-1">
         <input type="checkbox" class="switch-input" disabled checked>
         <span class="switch-control"></span>
-        <span class="switch-description ml-0_25">Disabled Checked Primary</span>
+        <span class="switch-description ms-0_25">Disabled Checked Primary</span>
     </label>
 </div>
 <div class="form-group form-inline">
-    <label class="switch switch-secondary mr-1">
+    <label class="switch switch-secondary me-1">
         <input type="checkbox" class="switch-input">
         <span class="switch-control"></span>
-        <span class="switch-description ml-0_25">Secondary</span>
+        <span class="switch-description ms-0_25">Secondary</span>
     </label>
-    <label class="switch switch-rounded switch-secondary mr-1">
+    <label class="switch switch-rounded switch-secondary me-1">
         <input type="checkbox" class="switch-input">
         <span class="switch-control"></span>
-        <span class="switch-description ml-0_25">Rounded Secondary</span>
+        <span class="switch-description ms-0_25">Rounded Secondary</span>
     </label>
-    <label class="switch switch-secondary mr-1">
+    <label class="switch switch-secondary me-1">
         <input type="checkbox" class="switch-input" disabled>
         <span class="switch-control"></span>
-        <span class="switch-description ml-0_25">Disabled Secondary</span>
+        <span class="switch-description ms-0_25">Disabled Secondary</span>
     </label>
-    <label class="switch switch-secondary mr-1">
+    <label class="switch switch-secondary me-1">
         <input type="checkbox" class="switch-input" disabled checked>
         <span class="switch-control"></span>
-        <span class="switch-description ml-0_25">Disabled Checked Secondary</span>
+        <span class="switch-description ms-0_25">Disabled Checked Secondary</span>
     </label>
 </div>
 <div class="form-group form-inline">
-    <label class="switch switch-success mr-1">
+    <label class="switch switch-success me-1">
         <input type="checkbox" class="switch-input">
         <span class="switch-control"></span>
-        <span class="switch-description ml-0_25">Success</span>
+        <span class="switch-description ms-0_25">Success</span>
     </label>
-    <label class="switch switch-rounded switch-success mr-1">
+    <label class="switch switch-rounded switch-success me-1">
         <input type="checkbox" class="switch-input">
         <span class="switch-control"></span>
-        <span class="switch-description ml-0_25">Rounded Success</span>
+        <span class="switch-description ms-0_25">Rounded Success</span>
     </label>
-    <label class="switch switch-success mr-1">
+    <label class="switch switch-success me-1">
         <input type="checkbox" class="switch-input" disabled>
         <span class="switch-control"></span>
-        <span class="switch-description ml-0_25">Disabled Success</span>
+        <span class="switch-description ms-0_25">Disabled Success</span>
     </label>
-    <label class="switch switch-success mr-1">
+    <label class="switch switch-success me-1">
         <input type="checkbox" class="switch-input" disabled checked>
         <span class="switch-control"></span>
-        <span class="switch-description ml-0_25">Disabled Checked Success</span>
+        <span class="switch-description ms-0_25">Disabled Checked Success</span>
     </label>
 </div>
 <div class="form-group form-inline">
-    <label class="switch switch-info mr-1">
+    <label class="switch switch-info me-1">
         <input type="checkbox" class="switch-input">
         <span class="switch-control"></span>
-        <span class="switch-description ml-0_25">Info</span>
+        <span class="switch-description ms-0_25">Info</span>
     </label>
-    <label class="switch switch-rounded switch-info mr-1">
+    <label class="switch switch-rounded switch-info me-1">
         <input type="checkbox" class="switch-input">
         <span class="switch-control"></span>
-        <span class="switch-description ml-0_25">Rounded Info</span>
+        <span class="switch-description ms-0_25">Rounded Info</span>
     </label>
-    <label class="switch switch-info mr-1">
+    <label class="switch switch-info me-1">
         <input type="checkbox" class="switch-input" disabled>
         <span class="switch-control"></span>
-        <span class="switch-description ml-0_25">Disabled Info</span>
+        <span class="switch-description ms-0_25">Disabled Info</span>
     </label>
-    <label class="switch switch-info mr-1">
+    <label class="switch switch-info me-1">
         <input type="checkbox" class="switch-input" disabled checked>
         <span class="switch-control"></span>
-        <span class="switch-description ml-0_25">Disabled Checked Info</span>
+        <span class="switch-description ms-0_25">Disabled Checked Info</span>
     </label>
 </div>
 <div class="form-group form-inline">
-    <label class="switch switch-warning mr-1">
+    <label class="switch switch-warning me-1">
         <input type="checkbox" class="switch-input">
         <span class="switch-control"></span>
-        <span class="switch-description ml-0_25">Warning</span>
+        <span class="switch-description ms-0_25">Warning</span>
     </label>
-    <label class="switch switch-rounded switch-warning mr-1">
+    <label class="switch switch-rounded switch-warning me-1">
         <input type="checkbox" class="switch-input">
         <span class="switch-control"></span>
-        <span class="switch-description ml-0_25">Rounded Warning</span>
+        <span class="switch-description ms-0_25">Rounded Warning</span>
     </label>
-    <label class="switch switch-warning mr-1">
+    <label class="switch switch-warning me-1">
         <input type="checkbox" class="switch-input" disabled>
         <span class="switch-control"></span>
-        <span class="switch-description ml-0_25">Disabled Warning</span>
+        <span class="switch-description ms-0_25">Disabled Warning</span>
     </label>
-    <label class="switch switch-warning mr-1">
+    <label class="switch switch-warning me-1">
         <input type="checkbox" class="switch-input" disabled checked>
         <span class="switch-control"></span>
-        <span class="switch-description ml-0_25">Disabled Checked Warning</span>
+        <span class="switch-description ms-0_25">Disabled Checked Warning</span>
     </label>
 </div>
 <div class="form-group form-inline">
-    <label class="switch switch-danger mr-1">
+    <label class="switch switch-danger me-1">
         <input type="checkbox" class="switch-input">
         <span class="switch-control"></span>
-        <span class="switch-description ml-0_25">Danger</span>
+        <span class="switch-description ms-0_25">Danger</span>
     </label>
-    <label class="switch switch-rounded switch-danger mr-1">
+    <label class="switch switch-rounded switch-danger me-1">
         <input type="checkbox" class="switch-input">
         <span class="switch-control"></span>
-        <span class="switch-description ml-0_25">Rounded Danger</span>
+        <span class="switch-description ms-0_25">Rounded Danger</span>
     </label>
-    <label class="switch switch-danger mr-1">
+    <label class="switch switch-danger me-1">
         <input type="checkbox" class="switch-input" disabled>
         <span class="switch-control"></span>
-        <span class="switch-description ml-0_25">Disabled Danger</span>
+        <span class="switch-description ms-0_25">Disabled Danger</span>
     </label>
-    <label class="switch switch-danger mr-1">
+    <label class="switch switch-danger me-1">
         <input type="checkbox" class="switch-input" disabled checked>
         <span class="switch-control"></span>
-        <span class="switch-description ml-0_25">Disabled Checked Danger</span>
+        <span class="switch-description ms-0_25">Disabled Checked Danger</span>
     </label>
 </div>
 
