Dropdown: allow ESC key to propagate when menu is closed

--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -590,6 +590,17 @@ $(window).ready(function() {
                                     <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
                                 </div>
                             <hr />
+                            <h4>Dropdown in a modal</h4>
+                            <div class="dropdown">
+                              <a href="#" role="button" class="dropdown-toggle" data-cfw="dropdown">
+                                Dropdown
+                              </a>
+                              <ul class="dropdown-menu">
+                                <li><a href="#">Action</a></li>
+                                <li><a href="#">Another action</a></li>
+                                <li><a href="#">Something else here</a></li>
+                              </ul>
+                            </div>
                             <h4>Overflowing text to show scroll behavior</h4>
                             <p>Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
                             <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
