Utils: Add imageLoaded utility function
Equlize: Convert to use new util, remove need to watch for lazy due to mutationObserver
Lazy: Use new util before show animation is called

--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -1737,6 +1737,7 @@ $(window).ready(function() {
                     <div class="well" data-cfw-equalize-group="eqtest0">
                         <h3>Panel 2</h3>
                         <p>Etiam nec pulvinar quam. Duis aliquam ut turpis et vulputate. Proin malesuada sem purus, in hendrerit ex dapibus sed. Cras orci quam, vestibulum eget purus at, ultricies ultricies libero! Morbi fringilla accumsan purus, eu sodales enim suscipit nec.</p>
+                        <img data-cfw-lazy-src="../../docs/assets/img/test.gif" alt="test pattern" class="img-fluid" data-cfw="lazy" data-cfw-lazy-speed=1000 />
                     </div>
                 </div>
                 <div class="col-md-4">
