--- a/widgets/lazy/index.html
+++ b/widgets/lazy/index.html
@@ -74,7 +74,7 @@
     <button class="navbar-toggle flex-first me-0_5" type="button" data-cfw="collapse" data-cfw-collapse-target="#cf-topnav" aria-label="Toggle navigation">
         <span class="cf-header-menu" aria-hidden="true">&#8801;</span>
     </button>
-    <div class="navbar-collapse collapse flex-last flex-lg-unordered flex-lg-shrink text-nowrap" id="cf-topnav">
+    <div class="navbar-collapse collapse flex-last flex-lg-unordered text-nowrap" id="cf-topnav">
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a href="/get-started/quick-start/" class="nav-link ">Get Started</a>
@@ -579,7 +579,7 @@
 
 <h3 id="methods">Methods</h3>
 
-<h4 class="no_toc" id="cfw_lazyoptionsdt"><code class="highlighter-rouge">.CFW_Lazy(options)&lt;/dt&gt;</code></h4>
+<h4 class="no_toc" id="cfw_lazyoptions"><code class="highlighter-rouge">.CFW_Lazy(options)</code></h4>
 
 <p>Activates the image as a lazy loaded element. Accepts an optional options <code class="highlighter-rouge">object</code>.</p>
 
@@ -633,7 +633,7 @@
     <footer class="cf-footer">
     <div class="container">
         <p class="mb-0">
-            Current version: 3.0.0
+            Current version: 3.0.1
         </p>
         <ul class="footer-links d-inline-block d-sm-block mx-auto mx-sm-0">
             <li><a href="/about/overview/">About</a></li>
