Navbar: Handle links inside navbar-text

--- a/test/visual/flexbox-navbar.html
+++ b/test/visual/flexbox-navbar.html
@@ -457,5 +457,15 @@
     </nav>
 </div>
 
+<h2>Navbar Text w/ Links</h2>
+
+<nav class="navbar navbar-light bg-faded">
+    <span class="navbar-text">Navbar text <a href="#">link</a> example</span>
+</nav>
+
+<nav class="navbar navbar-dark bg-inverse">
+    <span class="navbar-text">Navbar text <a href="#">link</a> example</span>
+</nav>
+
 </body>
 </html>
